<resources>
    <string name="app_name">ProjectStash</string>
    <string name="action_settings">Settings</string>
    <string name="image">image</string>
    <string name="delete">Delete</string>
    <string name="add">Add/Change Image</string>
    <string name="add_image">Add Image</string>
    <string name="add_it">ADD IT!</string>
    <string name="noimage">noimage</string>
    <string name="enter_item_title">Enter item title</string>
</resources>
