<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:padding="10dp"
        android:hint="@string/enter_item_title"
        android:id="@+id/edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/add"
        android:id="@+id/addbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:contentDescription="@string/noimage"
        android:src="@drawable/noimage"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/add_image"
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <Button
        android:layout_marginTop="10dp"
        android:text="@string/add_it"
        android:layout_gravity="center"
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>